Change to 0_ interfacenames
@zyga, I have modifed the interface names

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -175,9 +175,9 @@ slots:
   bt-serial:
     interface: serial-port
     path: /dev/ttyAMA0
-  spidev0:
+  spidev0-0:
      interface: spi
      path: /dev/spidev0.0
-  spidev1:
+  spidev0-1:
      interface: spi
      path: /dev/spidev0.1
