--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -4,6 +4,7 @@ summary: Raspberry Pi 3 support package
 description: |
  Support files for booting Raspberry Pi
 type: gadget
+base: core18
 architectures:
   - armhf
 confinement: strict
