Use a much simpler config-set for the classic raspi3, same for uboot.env. Make sure we install uboot.env into the boot partition. Use the bionic dtbs instead of the xenial ones.

--- a/uboot.env.in
+++ b/uboot.env.in
@@ -1,56 +1,8 @@
-arch=arm
-baudrate=115200
-boot_a_script=load ${devtype} ${devnum}:${bootpart} ${scriptaddr} ${prefix}${script}; source ${scriptaddr}
-boot_extlinux=sysboot ${devtype} ${devnum}:${bootpart} any ${scriptaddr} ${prefix}extlinux/extlinux.conf
-boot_prefixes=/ /boot/
-boot_script_dhcp=boot.scr.uimg
-boot_scripts=boot.scr.uimg boot.scr
-boot_targets=mmc usb pxe dhcp 
-bootcmd=run distro_bootcmd
-bootcmd_dhcp=usb start; if dhcp ${scriptaddr} ${boot_script_dhcp}; then source ${scriptaddr}; fi
-bootcmd_mmc=setenv devnum 0; run dev_boot
-bootcmd_pxe=usb start; dhcp; if pxe get; then pxe boot; fi
-bootcmd_usb=setenv devnum 0; usb start; run dev_boot
-bootdelay=2
-bootenv=uEnv.txt
-cpu=armv7
-devnum=0
-devtype=mmc
-dhcpuboot=usb start; dhcp u-boot.uimg; bootm
-distro_bootcmd=for target in ${boot_targets}; do run bootcmd_${target}; done
-fdt_addr_r=0x00000100
-fdtaddr=0x02000000
-fdtfile=bcm2709-rpi-2-b.dtb
-filesize=1c5
-importbootenv=echo Importing environment from ${target} ...; env import -t -r $loadaddr $filesize
-initrd_addr=0x02100000
-initrd_file=initrd.img
+bootcmd=run boot_ubuntu
+boot_ubuntu=run setup; run loadkernel; run loadinitrd; bootz ${kernel_addr_r} ${ramdisk_addr_r}:${initrdsize} ${fdt_addr_r}
+setup=fdt addr ${fdt_addr_r}; fdt get value bootargs /chosen bootargs
+loadkernel=fatload mmc 0:1 ${kernel_addr_r} vmlinuz
+loadinitrd=fatload mmc 0:1 ${ramdisk_addr_r} initrd.img; setenv initrdsize $filesize
+fdt_addr_r=0x02008000
 kernel_addr_r=0x01000000
-kernel_file=kernel.img
-loadaddr=0x00200000
-loadbootenv=echo LOADBOOTENV; load ${devtype} ${devnum} ${loadaddr} ${bootenv}
-loadfdt=fdt addr 0x02000000; fdt get value args /chosen bootargs
-loadfiles=run loadkernel; run loadinitrd; run loadfdt
-loadinitrd=load ${target} ${devnumber}:${partition} ${initrd_addr} ${snap_kernel}/${initrd_file}; setenv initrd_size ${filesize}
-loadkernel=load ${target} ${devnumber}:${partition} ${loadaddr} ${snap_kernel}/${kernel_file}
-dev_boot=if ${target} dev ${devnum}; then setenv devtype ${target}; if run loadbootenv; then echo Loaded environment from ${bootenv}; run importbootenv; fi; if test -n "$uenvcmd"; then echo Running uenvcmd ...; run uenvcmd; fi; run scan_dev_for_boot_part; fi
-allargs=setenv bootargs "${args} root=${devroot}"
-devnumber=0
-partition=1
-mmcrootfstype=ext4
-pxefile_addr_r=0x00100000
 ramdisk_addr_r=0x02100000
-scan_dev_for_boot=echo Scanning ${devtype} ${devnum}:${bootpart}...; for prefix in ${boot_prefixes}; do run scan_dev_for_extlinux; run scan_dev_for_scripts; done
-scan_dev_for_boot_part=part list ${devtype} ${devnum} devplist; for bootpart in ${devplist}; do if fstype ${devtype} ${devnum}:${bootpart} bootfstype; then run scan_dev_for_boot; fi; done
-scan_dev_for_extlinux=if test -e ${devtype} ${devnum}:${bootpart} ${prefix}extlinux/extlinux.conf; then echo Found ${prefix}extlinux/extlinux.conf; run boot_extlinux; echo SCRIPT FAILED: continuing...; fi
-scan_dev_for_scripts=for script in ${boot_scripts}; do if test -e ${devtype} ${devnum}:${bootpart} ${prefix}${script}; then echo Found U-Boot script ${prefix}${script}; run boot_a_script; echo SCRIPT FAILED: continuing...; fi; done
-scriptaddr=0x00000000
-snappy_boot=if test "${snap_mode}" = "try"; then setenv snap_mode "trying"; saveenv; if test "${snap_try_core}" != ""; then setenv snap_core "${snap_try_core}"; fi; if test "${snap_try_kernel}" != ""; then setenv snap_kernel "${snap_try_kernel}"; fi; elif test "${snap_mode}" = "trying"; then setenv snap_mode ""; saveenv; fi; run loadfiles; setenv devroot "/dev/disk/by-label/writable ${snappy_cmdline} snap_core=${snap_core} snap_kernel=${snap_kernel}"; run allargs; bootz ${loadaddr} ${initrd_addr}:${initrd_size} 0x02000000
-snappy_cmdline=net.ifnames=0 init=/lib/systemd/systemd ro panic=-1 fixrtc
-snappy_mode=
-soc=bcm2835
-stderr=serial,lcd
-stdin=serial,usbkbd
-stdout=serial,lcd
-uenvcmd=echo ENVCMD; run snappy_boot
-vendor=raspberrypi
