--- a/gadget.yaml
+++ b/gadget.yaml
@@ -11,3 +11,5 @@ volumes:
         content:
           - source: boot-assets/
             target: /
+          - source: uboot.env
+            target: uboot.env
