--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: pi3
-version: 16.04-0.6
+version: 18-classic
 summary: Raspberry Pi 3 support package
 description: |
  Support files for booting Raspberry Pi 3 for classic Ubuntu
