--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -32,6 +32,7 @@ parts:
       - bison
       - build-essential
       - device-tree-compiler
+      - flex
       - libpython2.7-dev
       - python-minimal
       - on amd64 to armhf:
